# playgrounds

./: .gitignore
cpp/tour/: CMakeLists.txt
erlang/: echo.erl  filter.erl  foldr.erl  hello.erl  map.erl
erlang/pplexams/: ex20170705.erl  ex20170720.erl  ex20170901.erl  ex20180116.erl  ex20180205.erl  ex20180706.erl  ex20180720.erl  ex20180905.erl  filter_parallel.erl  map_parallel.erl
haskell/first_principles/: .ex6.hs.swp  cipher.hs  ex10.hs  ex2.hs  ex23.hs  ex3.hs  ex4.hs  ex5.hs  ex6.hs  ex7.hs  ex8.hs  ex9.hs
haskell/pplexams/: 2015-07-06.hs  2015-07-24.hs  2015-09-10.hs  2016-07-22.hs  2016-09-08.hs  2016-09-22.hs  2018-01-16.hs  2018-07-06.hs  2018-07-20.hs  2018-09-05.hs  ex_state_monad.hs
haskell/types/: bilist.hs  binary_tree.hs  circular_list.hs  generic_tree.hs  graph.hs  infinite_tree.hs  list_of_lists.hs  listree.hs  periodic_sream.hs  ternary_tree.hs
java/src/: Tasi.java
javascript/italian/: home.html  home.js
matlab/dsp/: ex1.m  ex11.m  ex14.m  ex18.m  ex19.m  ex2.m  ex4.m  ex5.m  ex8.m  sinusoid.m
matlab/numerical_analysis/: bisection.m  bisection_newton.m  fixed_point.m  lab01.m  lab01_2.m  lab01_3.m  lab01_8.m  lab02.m  lab03.m  newton_method.m  test.m
rust/: Cargo.toml
rust/aoc/: Cargo.toml
rust/aoc/aoc_2020/: Cargo.toml
rust/aoc/aoc_2020/src/: grid.rs  lib.rs  main.rs  y20d01.rs  y20d02.rs  y20d03.rs  y20d04.rs  y20d05.rs  y20d06.rs  y20d07.rs  y20d08.rs  y20d09.rs  y20d10.rs  y20d11.rs  y20d12.rs  y20d13.rs  y20d14.rs  y20d15.rs  y20d16.rs  y20d17.rs
scheme/: call_cc_simple.rkt  for_break.rkt  listcomp.rkt  namedlet.rkt
(+311 files in other folders)
