[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["noplus <nonsvizzero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
chrono = "0.4"
counter = "0.5.2"
eval = "0.4.3"
indoc = "1.0"
itertools = "0.8.2"
petgraph = "0.5.1"
regex = "1"
smart-default = "0.6.0"